Added some comments for DOxygen, still missing member class, purchase class and sales class

--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -274,7 +274,7 @@
            </spacer>
           </item>
           <item row="9" column="1">
-           <widget class="QPushButton" name="pushButton_8">
+           <widget class="QPushButton" name="pushButton_renewMembership">
             <property name="text">
              <string>GO</string>
             </property>
@@ -569,7 +569,7 @@
          </layout>
         </item>
         <item row="2" column="0">
-         <widget class="QPushButton" name="pushButton">
+         <widget class="QPushButton" name="pushButton_generateItemList">
           <property name="text">
            <string>Generate Item List</string>
           </property>
@@ -583,7 +583,7 @@
          </widget>
         </item>
         <item row="3" column="0">
-         <widget class="QPushButton" name="pushButton_2">
+         <widget class="QPushButton" name="pushButton_backMenu">
           <property name="text">
            <string>Go Back</string>
           </property>
@@ -723,7 +723,7 @@
            </spacer>
           </item>
           <item row="9" column="2">
-           <widget class="QPushButton" name="pushButton_3">
+           <widget class="QPushButton" name="pushButton_viewAllPurchases">
             <property name="text">
              <string>View All Purchases</string>
             </property>
@@ -737,25 +737,32 @@
        <layout class="QGridLayout" name="gridLayout_17">
         <item row="0" column="0">
          <layout class="QGridLayout" name="gridLayout_16">
+          <item row="1" column="0">
+           <widget class="QListWidget" name="listWidget_expMem"/>
+          </item>
           <item row="1" column="1">
            <widget class="QListWidget" name="listWidget_expMemPlus"/>
           </item>
           <item row="5" column="1">
-           <widget class="QPushButton" name="pushButton_9">
+           <widget class="QPushButton" name="pushButton_renewExec">
             <property name="text">
              <string>Renew as Executive Member</string>
             </property>
            </widget>
           </item>
           <item row="5" column="0">
-           <widget class="QPushButton" name="pushButton_7">
+           <widget class="QPushButton" name="pushButton_renewNormal">
             <property name="text">
              <string>Renew as normal member</string>
             </property>
            </widget>
           </item>
-          <item row="1" column="0">
-           <widget class="QListWidget" name="listWidget_expMem"/>
+          <item row="3" column="0" colspan="2">
+           <widget class="QPushButton" name="pushButton_generateExpDate">
+            <property name="text">
+             <string>Generate Expiration Date List</string>
+            </property>
+           </widget>
           </item>
           <item row="0" column="0">
            <widget class="QLabel" name="label_13">
@@ -764,15 +771,8 @@
             </property>
            </widget>
           </item>
-          <item row="3" column="0" colspan="2">
-           <widget class="QPushButton" name="pushButton_5">
-            <property name="text">
-             <string>Generate Expiration Date List</string>
-            </property>
-           </widget>
-          </item>
           <item row="4" column="0" colspan="2">
-           <widget class="QPushButton" name="pushButton_6">
+           <widget class="QPushButton" name="pushButton_inspectMember">
             <property name="text">
              <string>Inspect Member</string>
             </property>
@@ -780,8 +780,8 @@
           </item>
          </layout>
         </item>
-        <item row="6" column="0">
-         <widget class="QPushButton" name="pushButton_4">
+        <item row="1" column="0">
+         <widget class="QPushButton" name="pushButton_backToMain">
           <property name="text">
            <string>Return to Main Menu</string>
           </property>
